syntax = "proto3";
option go_package = "/gen";

message Metadata {
  string id = 1;
  string title = 2;
  string description = 3;
  string director = 4;
}

message MovieDetails {
  float rating = 1;
  Metadata metadata = 2;
}

service MetadataService {
  rpc GetMetadata(GetMetadataReqeust) returns (GetMetadataResponse);
  rpc PutMetadata(PutMetadataRequest) returns (PutMetadataResponse);
}

message GetMetadataReqeust { string movie_id = 1; }
message GetMetadataResponse { Metadata metadata = 1; }

message PutMetadataRequest { Metadata metadata = 1; }

message PutMetadataResponse {}
// For the purpose of Rating service

service RatingService {
  rpc GetAggregatedRating(GetAggregatedRatingRequest)
      returns (GetAggregatedRatingResponse);
  rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetAggregatedRatingRequest {
  string record_id = 1;
  string record_type = 2;
}

message GetAggregatedRatingResponse { double rating_value = 1; }
message PutRatingRequest {
  string user_id = 1;
  string record_id = 2;
  string record_type = 3;
  int32 rating_value = 4;
}

message PutRatingResponse {}

// For the purpose of Movie Service

service MovieService {
  rpc GetMovieDetails(GetMovieDetailsRequest) returns (GetMovieDetailsResponse);
}

message GetMovieDetailsRequest { string movie_id = 1; }
message GetMovieDetailsResponse { MovieDetails movie_details = 1; }
